--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,11 +1,11 @@
 docs_list_title: ACME Documentation
 docs:
 
-- title: Airglow
-  url: {{ site.baseurl }}background/airglow.html
+  - title: Introduction
+    url: introduction.html
 
-- title: Gravity Waves
-  url: {{ site.baseurl }}background/gravitywaves.html
+  - title: Configuration
+    url: configuration.html
 
-- title: The Atmosphere
-  url: {{ site.baseurl }}background/theatmosphere.html
+  - title: Deployment
+    url: deployment.html
