--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,11 +1,27 @@
-docs_list_title: ACME Documentation
+docs_list_title: Background
 docs:
-
-  - title: Introduction
-    url: introduction.html
-
-  - title: Configuration
-    url: configuration.html
-
-  - title: Deployment
-    url: deployment.html
+  - title: Airglow
+    url: {{ site.baseurl }}airglow.html
+    subfolderitems:
+      - page: Thing 1
+        url: /thing1.html
+      - page: Thing 2
+        url: /thing2.html
+      - page: Thing 3
+        url: /thing3.html
+  - title: Gravity Waves
+    subfolderitems:
+      - page: Piece 1
+        url: /piece1.html
+      - page: Piece 2
+        url: /piece2.html
+      - page: Piece 3
+        url: /piece3.html
+  - title: The Atmosphere
+    subfolderitems:
+      - page: Widget 1
+        url: /widget1.html
+      - page: Widget 2
+        url: /widget2.html
+      - page: Widget 3
+        url: /widget3.html
